src/test/deca/context/invalid/provided/double_declaration.deca
/*/ Description:
//    Programme faisant la déclaration dd'une variable deux fois d'affilée.
//
// Resultats:
//    Ligne 11 : Erreur contextuelle
//
// Historique:
//    cree le 01/01/2022*/

{
        int x = 3;
        int x = 6;
}
